@@ -59,17 +59,16 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 701)
-(Parent-Version lpmud 3-3 700)
+(Project-Version lpmud 3-3 702)
+(Parent-Version lpmud 3-3 701)
 (Version-Log "
-  - (configure) Added a check to see if the system is using a broken iconv
-      (part of glibc 2.0-2.2) - this iconv can throw the driver into an
-      endless loop (Bug #0000377).
+  - (sprintf) Printing structures with '%O' or '%Q' in non-compact
+      mode also prints the names of the structure members (Bug #0000380).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Fri, 13 May 2005 23:38:38 -0600")
+(Checkin-Time "Sat, 14 May 2005 15:07:50 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -108,8 +107,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.86 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.764 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.385.1.22 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.765 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.385.1.23 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -352,7 +351,7 @@
   (src/sysmalloc.h (lpmud/c/b/33_sysmalloc. 1.2 644))
   (src/sysmalloc.c (lpmud/c/b/34_sysmalloc. 1.7 644))
   (src/sprintf.h (lpmud/f/15_sprintf.h 1.3.1.4 644))
-  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.64 644))
+  (src/sprintf.c (lpmud/28_sprintf.c 1.31.1.65 644))
   (src/strfuns.h (lpmud/b/51_strfuns.h 1.11.1.8 644))
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.22 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
